<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_msgs</name>
  <version>0.0.0</version>
  <description>Package for custom messages (my_msgs).</description>

  <maintainer email="26619055@students.lincoln.ac.uk">prabuddhi</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies for message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Execution dependencies for using the generated .msg files at runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>std_msgs</exec_depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Must be ament_cmake for .msg generation -->
    <build_type>ament_cmake</build_type>
    <!-- Mark this package as an interface package in ROS 2 (Humble+) -->
     <!--<member_of_group>rosidl_interface_packages</member_of_group>-->
  </export>
</package>



